--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "browser-sync": "^2.23.6",
-    "gulp": "^3.9.1",
-    "gulp-less": "^3.4.0",
-    "gulp-sass": "^3.1.0"
+    "browser-sync": "^2.26.3",
+    "gulp-less": "^3.4.0"
+  },
+  "dependencies": {
+    "gulp": "^3.9.1"
   }
 }
